--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
   web_socket_client: ^0.2.0
+  universal_io: ^2.2.2
+  web_socket_channel: ^3.0.3
 
 dev_dependencies:
   flutter_test:
