--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   web_socket_client: ^0.2.0
   universal_io: ^2.2.2
   web_socket_channel: ^3.0.3
+  flutter_markdown: ^0.7.7
 
 dev_dependencies:
   flutter_test:
